CFN only clones scripts repo, userdata.sh pulls config repo

--- a/clawdbot-bedrock-agentcore.yaml
+++ b/clawdbot-bedrock-agentcore.yaml
@@ -275,8 +275,7 @@ Resources:
               GHEOF
               chmod 600 /root/.config/gh/hosts.yml
 
-              # Clone repos with token embedded in URL (avoids credential helper issues)
-              git clone "https://dgarwin:$GH_PAT@github.com/dgarwin/dgarwin-openclaw.git" /opt/openclaw-repo
+              # Clone scripts repo with token embedded in URL (avoids credential helper issues)
               git clone "https://dgarwin:$GH_PAT@github.com/dgarwin/dgarwin-openclaw-scripts.git" /opt/openclaw-scripts
 
               export GH_PAT="$GH_PAT"
